<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4EB8D8"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_width="match_parent"
        android:layout_height="94dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="729dp"
            tools:layout_editor_absoluteY="1dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="35dp"
                android:layout_height="29dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/locations"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="160dp"
                android:layout_marginBottom="10dp"
                android:text="@string/enter_the_current_location"
                android:textColor="#050505"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="105dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_location"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/search" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollview2"
        android:layout_width="423dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="421dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <TextView
                android:id="@+id/filter1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="104dp"
                android:text="@string/grocery"
                android:textColor="#040303"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/filter2"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/filter2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="285dp"
                android:text="@string/stationery"
                android:textColor="#0B0B0B"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/filter1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/filter3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="211dp"
                android:text="@string/medicine"
                android:textColor="#070707"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/filter2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/filter4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="90dp"
                android:layout_marginBottom="103dp"
                android:text="@string/food"
                android:textColor="#020202"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/filter3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/filter5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="103dp"
                android:text="@string/more"
                android:textColor="#070707"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/filter4"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemlist"
        android:layout_width="match_parent"
        android:layout_height="500dp">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@drawable/box">


        <ImageView
            android:id="@+id/account"
            android:layout_width="43dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="340dp"
            android:layout_marginBottom="7dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.842"
            app:srcCompat="@drawable/user"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/rewards"
            android:layout_width="43dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="260dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/account"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gift"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/add"
            android:layout_width="43dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="180dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/rewards"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/plus"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="43dp"
            android:layout_height="48dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="90dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/add"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/setting"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/help"
            android:layout_width="43dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/help"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>